--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,31 +4,103 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 3rem;
   background-color: $dark-background;
   color: $light-text;
 }
 
 .nav {
+  display: flex;
+  align-items: center;
+
   .nav-link {
     margin-right: 1rem;
-    color: var(--text-color);
+    color: $light-text;
     text-decoration: none;
 
-    &:hover {
-      text-decoration: underline;
+    &:after {
+      display:block;
+      content: '';
+      border-bottom: solid 1px $light-background;
+      transform: scaleX(0);
+      transition: transform 250ms ease-in-out;
+      width: 100%;
+    }
+
+    &:hover:after {
+      transform: scaleX(1);
     }
   }
 }
 
-.theme-switcher {
-  label {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+.settings-option {
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
 
-    input[type="checkbox"] {
-      margin-left: 0.5rem;
-    }
+.theme-toggler__checkbox {
+  opacity: 0;
+  position: absolute;
+  right: 30px;
+  top: 25%;
+  z-index: 1;
+}
+
+.theme-toggler__label {
+  font-weight: normal;
+  font-size: 1.2em;
+  display: inline-block;
+  vertical-align: middle;
+  flex: 1;
+  margin-right: 2em;
+  color:#35394b;
+}
+
+.theme-toggler__switch {
+  width: 50px;
+  height: 25px;
+  margin-left: 1rem;
+  border-radius: 1em;
+  position: relative;
+  cursor: pointer;
+  background: #eee;
+  border: 2px solid #ddd;
+  transition: all .1s linear;
+  display: inline-block;
+  vertical-align: middle;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    margin-top: 0px;
+    margin-left: 1px;
+    border-radius: 1em;
+    background: #fff;
+    border: 1px solid #eee;
+    box-shadow: 2px 5px 10px -2px rgba(0, 0, 0, 0.2);
+    transition: all .1s linear;
   }
+}
+
+.theme-toggler__checkbox:focus + .theme-toggler__switch {
+  box-shadow: 0 0 0 5px #fff, 0 0 0 7px orange;
+  outline: 3px solid transparent;
+}
+
+.theme-toggler__checkbox:focus:not(:focus-visible) + .theme-toggler__switch {
+  box-shadow: none;
+}
+
+.theme-toggler__checkbox:checked + .theme-toggler__switch {
+  background: #76D672;
+  border-color: #76D672;
+}
+
+.theme-toggler__checkbox:checked + .theme-toggler__switch::after {
+  transform: translatex(22px);
+  transition: transform .1s linear;
+  border-color: #fff;
 }
