--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,16 +4,27 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  background: $light-background;
-  a {
-    text-decoration: none;
-    margin-right: 1rem;
-    color: $dark-text;
-  }
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+p,
+ul,
+a,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 .list-item {
@@ -31,10 +42,13 @@ body {
   }
 }
 
-.theme-switcher {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
+.container {
+  display: flex;
+  margin: 0 auto;
+  padding: 3rem 1rem;
+  width: 100%;
+  height: 100vh;
+  max-width: 680px;
 }
 
 .light-theme {
@@ -47,11 +61,6 @@ body {
   --background: $dark-background;
   --text-color: $light-text;
   --border-color: darken($border-color, 20%);
-}
-
-body {
-  background: var(--background);
-  color: var(--text-color);
 }
 
 .list-item {
